--- a/curriculo_html/cv.html
+++ b/curriculo_html/cv.html
@@ -5,22 +5,30 @@
     <style>
         .line {
             line-height: 0.5;
+
         }
 
         .marg {
             margin-top: 100px;
-            margin-left: 150px;
-            
+            margin-left: 200px;
+            margin-right: 200px;
+            margin-bottom: 100px;
         }
 
         .quebra {
             height: 3px;
-            width: 1000px;
+            width: 900px;
             background-color: blue;
             margin-left: 2px;
         }
 
         h2 {
+            font-family: 'Times New Roman';
+            font-style: italic;
+        }
+
+        h3 {
+            font-family: Arial;
             font-style: italic;
         }
     </style>
@@ -34,12 +42,16 @@
     <div class="marg">
         <div class="line">
             <h1>NICKOLAS RAPHAEL MACHADO</h1>
-            <h3>21 Anos</h3>
+            <b style="font-size: 20px" ;>21 Anos</b >
             <hr class="quebra">
         </div>
         <div class="line">
             <h2>DADOS DE CONTATO:</h2>
-            <h3>E-mail:</h3> nickolasraphael3232@gmail.com 
+            <h3>E-mail: <span
+                    style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-style: unset; font-weight: 400;">nickolasraphael3232@gmail.com</span>
+            </h3>
+
+            
         </div>
     </div>
 
