--- a/teste.html
+++ b/teste.html
@@ -15,5 +15,6 @@
     <p>Teste</p>
     <a href="index.html">Vá para o index</a>
     <a href="style.html">Vá para o index</a>
+    <input_type="text">
 </body>
 </html>
