--- a/curriculo_html/cv.html
+++ b/curriculo_html/cv.html
@@ -2,56 +2,46 @@
 <html lang="en">
 
 <head>
-    <style>
-        .line {
-            line-height: 0.5;
-
-        }
-
-        .marg {
-            margin-top: 100px;
-            margin-left: 200px;
-            margin-right: 200px;
-            margin-bottom: 100px;
-        }
-
-        .quebra {
-            height: 3px;
-            width: 900px;
-            background-color: blue;
-            margin-left: 2px;
-        }
-
-        h2 {
-            font-family: 'Times New Roman';
-            font-style: italic;
-        }
-
-        h3 {
-            font-family: Arial;
-            font-style: italic;
-        }
-    </style>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculo</title>
+    <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
     <div class="marg">
         <div class="line">
             <h1>NICKOLAS RAPHAEL MACHADO</h1>
-            <b style="font-size: 20px" ;>21 Anos</b >
+            <b style="font-size: 20px" ;>21 Anos</b>
             <hr class="quebra">
         </div>
         <div class="line">
             <h2>DADOS DE CONTATO:</h2>
-            <h3>E-mail: <span
-                    style="font-family: Verdana, Geneva, Tahoma, sans-serif; font-style: unset; font-weight: 400;">nickolasraphael3232@gmail.com</span>
+            <h3>E-mail: <span style="font-weight: 400; font-style: normal;">nickolasraphael3232@gmail.com</span> <span
+                    style="padding-left: 290px;">Celular: </span>
+                <span style="font-weight: 400; font-style: normal;"> (15) 99801-5138</span>
             </h3>
-        
-            
+            <h3>LinkedIn: <span style="font-style: normal;"> <a
+                        href="https://www.linkedin.com/in/nickolas-machado-10a110350/">linkedin/nickolas-machado</a>
+                </span>
+                <span style="padding-left: 318px;">GitHub: </span>
+                <span style="font-style: normal;"><a href="https://github.com/nick0lasrm">github/nick0lasrm</a></span>
+            </h3>
+            <h3>CEP: <span style="font-weight: 400;font-style: normal;">18112-640</span> <span
+                    style="padding-left: 506px;">Cidade: </span>
+                <span style="font-weight: 400; font-style: normal;"> Votorantim-SP</span>
+            </h3>
+
+
+        </div>
+        <div class="marge">
+            <div class="line">
+                <h2>OBJETIVOS:</h2>
+                <div class="line2">
+                    <h4>Em busca de uma oportunidade para que eu possa aplicar e ampliar meus conhecimentos profissionais,</h4>
+                    <h4>contribuindo para a empresa no cargo que me for confiado.</h4>
+                </div>
+            </div>
         </div>
     </div>
 
