--- a/curriculo_html/cv.html
+++ b/curriculo_html/cv.html
@@ -36,11 +36,39 @@
         </div>
         <div class="marge">
             <div class="line">
-                <h2>OBJETIVOS:</h2>
-                <div class="line2">
-                    <h4>Em busca de uma oportunidade para que eu possa aplicar e ampliar meus conhecimentos profissionais,</h4>
-                    <h4>contribuindo para a empresa no cargo que me for confiado.</h4>
+                <h2>OBJETIVO:</h2>
+                <div style="line-height: 0;">
+                    <h4>Em busca de uma oportunidade para que eu possa aplicar e ampliar meus conhecimentos</h4>
+                    <h4>profissionais, contribuindo para a empresa no cargo que me for confiado.</h4>
                 </div>
+            </div>
+        </div>
+        <div class="marge">
+            <div class="line">
+                <h2>FORMAÇÃO:</h2>
+                <div style="line-height: 0.3;">
+                    <ul>
+                        <li>Ensino Medio Completo</li>
+                    </ul>
+                
+                <ul>
+                    <li>Tecnólogo em Análise e Desenvolvimento de Sistemas. Faculdade de Tecnologia</li>
+                </ul>
+                <ul>SENAI “Gaspar Ricardo Júnior”. 2025 (Conclusão em 2026)</ul>
+            </div>
+            </div>
+        </div>
+        <div class="marge">
+            <div class="line">
+                <h2>EXPERIÊNCIA:</h2>
+                <div style="line-height: 0.3;">
+                    <ul>
+                        <li style="font-style: italic; font-weight: bold;"> Posto Acos Combustiveis LTDA.</li>
+                    </ul>
+                
+                <ul>Cargo: Frentista/Caixa</ul>
+                <ul>Período: setembro/22 até o Presente</ul>
+            </div>
             </div>
         </div>
     </div>
