--- a/curriculo_html/cv.html
+++ b/curriculo_html/cv.html
@@ -15,6 +15,7 @@
             <b style="font-size: 20px" ;>21 Anos</b>
             <hr class="quebra">
         </div>
+        <!-- DADOS DE CONTATO -->
         <div class="line">
             <h2>DADOS DE CONTATO:</h2>
             <h3>E-mail: <span style="font-weight: 400; font-style: normal;">nickolasraphael3232@gmail.com</span> <span
@@ -31,9 +32,8 @@
                     style="padding-left: 506px;">Cidade: </span>
                 <span style="font-weight: 400; font-style: normal;"> Votorantim-SP</span>
             </h3>
-
-
         </div>
+        <!-- OBJETIVO -->
         <div class="marge">
             <div class="line">
                 <h2>OBJETIVO:</h2>
@@ -43,6 +43,7 @@
                 </div>
             </div>
         </div>
+        <!-- FORMACAO -->
         <div class="marge">
             <div class="line">
                 <h2>FORMAÇÃO:</h2>
@@ -50,14 +51,14 @@
                     <ul>
                         <li>Ensino Medio Completo</li>
                     </ul>
-                
-                <ul>
-                    <li>Tecnólogo em Análise e Desenvolvimento de Sistemas. Faculdade de Tecnologia</li>
-                </ul>
-                <ul>SENAI “Gaspar Ricardo Júnior”. 2025 (Conclusão em 2026)</ul>
-            </div>
+                    <ul>
+                        <li>Tecnólogo em Análise e Desenvolvimento de Sistemas. Faculdade de Tecnologia</li>
+                    </ul>
+                    <ul>SENAI “Gaspar Ricardo Júnior”. 2025 (Conclusão em 2026)</ul>
+                </div>
             </div>
         </div>
+        <!-- EXPERIENCIA -->
         <div class="marge">
             <div class="line">
                 <h2>EXPERIÊNCIA:</h2>
@@ -65,10 +66,33 @@
                     <ul>
                         <li style="font-style: italic; font-weight: bold;"> Posto Acos Combustiveis LTDA.</li>
                     </ul>
-                
-                <ul>Cargo: Frentista/Caixa</ul>
-                <ul>Período: setembro/22 até o Presente</ul>
+                    <ul>Cargo: Frentista/Caixa</ul>
+                    <ul>Período: setembro/22 até o Presente</ul>
+                </div>
             </div>
+        </div>
+        <!-- CURSOS COMPLEMENTARES -->
+        <div class="marge">
+            <div class="line">
+                <h2>CURSOS COMPLEMENTARES:</h2>
+                <div style="line-height: 0.3;">
+                    <ul>
+                        <li>Linguagem de programação Python - Básico</li>
+                    </ul>
+                    <ul>18 horas - Fundação Bradesco</ul>
+                    <ul>
+                        <li>Introdução à Programação Orientada a Objetos (POO)</li>
+                    </ul>
+                    <ul>5 horas - Fundação Bradesco</ul>
+                    <ul>
+                        <li>Fundamentos de Lógica de Programação </li>
+                    </ul>
+                    <ul>15 horas - Fundação Bradesco </ul>
+                    <ul>
+                        <li>Desenvolvimento Orientado a Objetos Utilizando a Linguagem Python</li>
+                    </ul>
+                    <ul>10 horas - Fundação Bradesco </ul>
+                </div>
             </div>
         </div>
     </div>
