--- a/curriculo_html/cv.html
+++ b/curriculo_html/cv.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="marg">
+        <div class="pad">
         <div class="line">
             <h1>NICKOLAS RAPHAEL MACHADO</h1>
             <b style="font-size: 20px" ;>21 Anos</b>
@@ -95,6 +96,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
 
