--- a/curriculo_html/cv.html
+++ b/curriculo_html/cv.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div class="container">
     <div class="marg">
         <div class="pad">
             <div class="line">
@@ -99,6 +100,7 @@
             </div>
         </div>
     </div>
+</div>
 
 </body>
 
