--- a/curriculo_html/cv.html
+++ b/curriculo_html/cv.html
@@ -37,17 +37,17 @@
                 </h3>
             </div>
             <!-- OBJETIVO -->
-            <div class="marge">
+            <div class="marge" style="height: 87";>
                 <div class="line">
                     <h2>OBJETIVO:</h2>
-                    <div style="line-height: 0;">
+                    <div style="line-height: 0; height: 40px;">
                         <h4>Em busca de uma oportunidade para que eu possa aplicar e ampliar meus conhecimentos</h4>
                         <h4>profissionais, contribuindo para a empresa no cargo que me for confiado.</h4>
                     </div>
                 </div>
             </div>
             <!-- FORMACAO -->
-            <div class="marge">
+            <div class="marge" style="margin-top: 60px";>
                 <div class="line">
                     <h2>FORMAÇÃO:</h2>
                     <div style="line-height: 0.4;">
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <!-- CURSOS COMPLEMENTARES -->
-            <div class="marge">
+            <div class="marge" style="height: 300px";>
                 <div class="line">
                     <h2>CURSOS COMPLEMENTARES:</h2>
                     <div style="line-height: 0.4;">
