--- a/receita_html/receita.html
+++ b/receita_html/receita.html
@@ -15,7 +15,7 @@
             <img src="https://static.itdg.com.br/images/640-440/543ffeb02eaaa8dfe47ab5042b65a908/253792-354452-original-1-.jpeg">
             </div>
             <div class="marg">
-            <h1>Pavê de Chocolate</h1>
+            <h1>Receita Pavê de Chocolate</h1>
         </div>
     </div>
     </div>
