--- a/receita_html/receita.html
+++ b/receita_html/receita.html
@@ -6,18 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receita</title>
     <link href="style.css" type="text/css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Monomakh&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="back">
-    <div class="margem">
+        <div class="margem">
             <div class="img" style="padding-top: 50px;">
-            <img src="https://static.itdg.com.br/images/640-440/543ffeb02eaaa8dfe47ab5042b65a908/253792-354452-original-1-.jpeg">
+                <img
+                    src="https://static.itdg.com.br/images/640-440/543ffeb02eaaa8dfe47ab5042b65a908/253792-354452-original-1-.jpeg">
             </div>
             <div class="marg">
-            <h1>Receita Pavê de Chocolate</h1>
+                <h1>Receita Pavê de Chocolate</h1>
+                <h4>É pavê ou pacumê! Essa receita de pavê de chocolate simples é um absurdo de gostosa!
+                    Um clássico nas festas de fim de ano e nas confraternizações em família, uma sobremesa que conquista
+                    paladares com sua combinação perfeita de cremosidade e sabor intenso de chocolate.</h4>
+
+            </div>
         </div>
-    </div>
     </div>
 </body>
 
