--- a/receita_html/receita.html
+++ b/receita_html/receita.html
@@ -14,7 +14,7 @@
 <body>
     <div class="back">
         <div class="margem">
-            <div class="img" style="padding-top: 50px;">
+            <div class="img" style="padding-top: 48px;">
                 <img
                     src="https://static.itdg.com.br/images/640-440/543ffeb02eaaa8dfe47ab5042b65a908/253792-354452-original-1-.jpeg">
             </div>
@@ -23,7 +23,14 @@
                 <h4>É pavê ou pacumê! Essa receita de pavê de chocolate simples é um absurdo de gostosa!
                     Um clássico nas festas de fim de ano e nas confraternizações em família, uma sobremesa que conquista
                     paladares com sua combinação perfeita de cremosidade e sabor intenso de chocolate.</h4>
-
+                <div class="intern" >
+                    <h3 style="color: rgb(129, 46, 107);">Tempo de preparo</h3>
+                    <ul>
+                        <li>Preparo 5 minutos</li>
+                        <li>Cozimento 10 minutos</li>   
+                        <li>Espera 40 minutos</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
