--- a/curriculo_html/cv.html
+++ b/curriculo_html/cv.html
@@ -8,99 +8,96 @@
     <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 
-<body>  
+<body>
     <div class="container">
-    <div class="marg">
-        <div class="pad">
-            <div class="line">
-                <h1>NICKOLAS RAPHAEL MACHADO</h1>
-                <b style="font-size: 20px" ;>21 Anos</b>
-                <hr class="quebra">
-            </div>
-            <!-- DADOS DE CONTATO -->
-            <div class="line">
-                <h2>DADOS DE CONTATO:</h2>
-                <h3>E-mail: <span style="font-weight: 400; font-style: normal;">nickolasraphael3232@gmail.com</span>
-                    <span style="padding-left: 190px;">Celular: </span>
-                    <span style="font-weight: 400; font-style: normal;"> (15) 99801-5138</span>
-                </h3>
-                <h3>LinkedIn: <span style="font-style: normal;"> <a
-                            href="https://www.linkedin.com/in/nickolas-machado-10a110350/">linkedin/nickolas-machado</a>
-                    </span>
-                    <span style="padding-left: 218px;">GitHub: </span>
-                    <span style="font-style: normal;"><a
-                            href="https://github.com/nick0lasrm">github/nick0lasrm</a></span>
-                </h3>
-                <h3>CEP: <span style="font-weight: 400;font-style: normal;">18112-640</span> <span
-                        style="padding-left: 405px;">Cidade: </span>
-                    <span style="font-weight: 400; font-style: normal;"> Votorantim-SP</span>
-                </h3>
-            </div>
-            <!-- OBJETIVO -->
-            <div class="marge" style="height: 87";>
+        <div class="marg">
                 <div class="line">
-                    <h2>OBJETIVO:</h2>
-                    <div style="line-height: 0; height: 40px;">
-                        <h4>Em busca de uma oportunidade para que eu possa aplicar e ampliar meus conhecimentos</h4>
-                        <h4>profissionais, contribuindo para a empresa no cargo que me for confiado.</h4>
+                    <h1>NICKOLAS RAPHAEL MACHADO</h1>
+                    <b style="font-size: 20px" ;>21 Anos</b>
+                    <hr class="quebra">
+                </div>
+                <!-- DADOS DE CONTATO -->
+                <div class="line">
+                    <h2>DADOS DE CONTATO:</h2>
+                    <h3>E-mail: <span style="font-weight: 400; font-style: normal;">nickolasraphael3232@gmail.com</span>
+                        <span style="padding-left: 190px;">Celular: </span>
+                        <span style="font-weight: 400; font-style: normal;"> (15) 99801-5138</span>
+                    </h3>
+                    <h3>LinkedIn: <span style="font-style: normal;"> <a
+                                href="https://www.linkedin.com/in/nickolas-machado-10a110350/">linkedin/nickolas-machado</a>
+                        </span>
+                        <span style="padding-left: 218px;">GitHub: </span>
+                        <span style="font-style: normal;"><a
+                                href="https://github.com/nick0lasrm">github/nick0lasrm</a></span>
+                    </h3>
+                    <h3>CEP: <span style="font-weight: 400;font-style: normal;">18112-640</span> <span
+                            style="padding-left: 406px; text-align: left;">Cidade: </span>
+                        <span style="font-weight: 400; font-style: normal;"> Votorantim-SP</span>
+                    </h3>
+                </div>
+                <!-- OBJETIVO -->
+                <div class="marge" style="height: 87" ;>
+                    <div class="line">
+                        <h2>OBJETIVO:</h2>
+                        <div style="line-height: 1.3; height: 40px; text-align: justify;">
+                            <h4>Em busca de uma oportunidade para que eu possa aplicar e ampliar meus conhecimentos
+                                profissionais, contribuindo para a empresa no cargo que me for confiado.</h4>
+                        </div>
+                    </div>
+                </div>
+                <!-- FORMACAO -->
+                <div class="marge" style="margin-top: 60px" ;>
+                    <div class="line">
+                        <h2>FORMAÇÃO:</h2>
+                        <div style="line-height: 1.2;">
+                            <ul>
+                                <li>Ensino Medio Completo</li>
+                            </ul>
+                            <ul>
+                                <li>Tecnólogo em Análise e Desenvolvimento de Sistemas. Faculdade de Tecnologia <br> SENAI “Gaspar Ricardo Júnior”. 2025 (Conclusão em 2026)</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- EXPERIENCIA -->
+                <div class="marge">
+                    <div class="line">
+                        <h2>EXPERIÊNCIA:</h2>
+                        <div style="line-height: 0.4;">
+                            <ul>
+                                <li style="font-style: italic; font-weight: bold;"> Posto Acos Combustiveis LTDA.</li>
+                            </ul>
+                            <ul>Cargo: Frentista/Caixa</ul>
+                            <ul>Período: setembro/22 até o Presente</ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- CURSOS COMPLEMENTARES -->
+                <div class="marge" style="height: 300px" ;>
+                    <div class="line">
+                        <h2>CURSOS COMPLEMENTARES:</h2>
+                        <div style="line-height: 0.4;">
+                            <ul>
+                                <li>Linguagem de programação Python - Básico</li>
+                            </ul>
+                            <ul>18 horas - Fundação Bradesco</ul>
+                            <ul>
+                                <li>Introdução à Programação Orientada a Objetos (POO)</li>
+                            </ul>
+                            <ul>5 horas - Fundação Bradesco</ul>
+                            <ul>
+                                <li>Fundamentos de Lógica de Programação </li>
+                            </ul>
+                            <ul>15 horas - Fundação Bradesco </ul>
+                            <ul>
+                                <li>Desenvolvimento Orientado a Objetos Utilizando a Linguagem Python</li>
+                            </ul>
+                            <ul>10 horas - Fundação Bradesco </ul>
+                        </div>
                     </div>
                 </div>
             </div>
-            <!-- FORMACAO -->
-            <div class="marge" style="margin-top: 60px";>
-                <div class="line">
-                    <h2>FORMAÇÃO:</h2>
-                    <div style="line-height: 0.4;">
-                        <ul>
-                            <li>Ensino Medio Completo</li>
-                        </ul>
-                        <ul>
-                            <li>Tecnólogo em Análise e Desenvolvimento de Sistemas. Faculdade de Tecnologia</li>
-                        </ul>
-                        <ul>SENAI “Gaspar Ricardo Júnior”. 2025 (Conclusão em 2026)</ul>
-                    </div>
-                </div>
-            </div>
-            <!-- EXPERIENCIA -->
-            <div class="marge">
-                <div class="line">
-                    <h2>EXPERIÊNCIA:</h2>
-                    <div style="line-height: 0.4;">
-                        <ul>
-                            <li style="font-style: italic; font-weight: bold;"> Posto Acos Combustiveis LTDA.</li>
-                        </ul>
-                        <ul>Cargo: Frentista/Caixa</ul>
-                        <ul>Período: setembro/22 até o Presente</ul>
-                    </div>
-                </div>
-            </div>
-            <!-- CURSOS COMPLEMENTARES -->
-            <div class="marge" style="height: 300px";>
-                <div class="line">
-                    <h2>CURSOS COMPLEMENTARES:</h2>
-                    <div style="line-height: 0.4;">
-                        <ul>
-                            <li>Linguagem de programação Python - Básico</li>
-                        </ul>
-                        <ul>18 horas - Fundação Bradesco</ul>
-                        <ul>
-                            <li>Introdução à Programação Orientada a Objetos (POO)</li>
-                        </ul>
-                        <ul>5 horas - Fundação Bradesco</ul>
-                        <ul>
-                            <li>Fundamentos de Lógica de Programação </li>
-                        </ul>
-                        <ul>15 horas - Fundação Bradesco </ul>
-                        <ul>
-                            <li>Desenvolvimento Orientado a Objetos Utilizando a Linguagem Python</li>
-                        </ul>
-                        <ul>10 horas - Fundação Bradesco </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
-</div>
 
 </body>
 
