--- a/curriculo_html/cv.html
+++ b/curriculo_html/cv.html
@@ -20,33 +20,33 @@
                 <div class="line">
                     <h2>DADOS DE CONTATO:</h2>
                     <h3>E-mail: <span style="font-weight: 400; font-style: normal;">nickolasraphael3232@gmail.com</span>
-                        <span style="padding-left: 190px;">Celular: </span>
+                        <span style="padding-left: 172px;">Celular: </span>
                         <span style="font-weight: 400; font-style: normal;"> (15) 99801-5138</span>
                     </h3>
                     <h3>LinkedIn: <span style="font-style: normal;"> <a
                                 href="https://www.linkedin.com/in/nickolas-machado-10a110350/">linkedin/nickolas-machado</a>
                         </span>
-                        <span style="padding-left: 218px;">GitHub: </span>
+                        <span style="padding-left: 200px;">GitHub: </span>
                         <span style="font-style: normal;"><a
                                 href="https://github.com/nick0lasrm">github/nick0lasrm</a></span>
                     </h3>
                     <h3>CEP: <span style="font-weight: 400;font-style: normal;">18112-640</span> <span
-                            style="padding-left: 406px; text-align: left;">Cidade: </span>
+                            style="padding-left: 388px; text-align: left;">Cidade: </span>
                         <span style="font-weight: 400; font-style: normal;"> Votorantim-SP</span>
                     </h3>
                 </div>
                 <!-- OBJETIVO -->
-                <div class="marge" style="height: 87" ;>
+                <div class="marge">
                     <div class="line">
                         <h2>OBJETIVO:</h2>
-                        <div style="line-height: 1.3; height: 40px; text-align: justify;">
+                        <div style="line-height: 1.3; text-align: justify;">
                             <h4>Em busca de uma oportunidade para que eu possa aplicar e ampliar meus conhecimentos
                                 profissionais, contribuindo para a empresa no cargo que me for confiado.</h4>
                         </div>
                     </div>
                 </div>
                 <!-- FORMACAO -->
-                <div class="marge" style="margin-top: 60px" ;>
+                <div class="marge">
                     <div class="line">
                         <h2>FORMAÇÃO:</h2>
                         <div style="line-height: 1.2;">
@@ -73,26 +73,22 @@
                     </div>
                 </div>
                 <!-- CURSOS COMPLEMENTARES -->
-                <div class="marge" style="height: 300px" ;>
+                <div class="marge" style="height: 400px" ;>
                     <div class="line">
                         <h2>CURSOS COMPLEMENTARES:</h2>
                         <div style="line-height: 0.4;">
                             <ul>
-                                <li>Linguagem de programação Python - Básico</li>
+                                <li>Linguagem de programação Python - Básico <br> 18 horas - Fundação Bradesco </li>
                             </ul>
-                            <ul>18 horas - Fundação Bradesco</ul>
                             <ul>
-                                <li>Introdução à Programação Orientada a Objetos (POO)</li>
+                                <li>Introdução à Programação Orientada a Objetos (POO) <br> 5 horas - Fundação Bradesco </li>
                             </ul>
-                            <ul>5 horas - Fundação Bradesco</ul>
                             <ul>
-                                <li>Fundamentos de Lógica de Programação </li>
+                                <li>Fundamentos de Lógica de Programação <br> 15 horas - Fundação Bradesco </li>
                             </ul>
-                            <ul>15 horas - Fundação Bradesco </ul>
                             <ul>
-                                <li>Desenvolvimento Orientado a Objetos Utilizando a Linguagem Python</li>
+                                <li>Desenvolvimento Orientado a Objetos Utilizando a Linguagem Python <br> 10 horas - Fundação Bradesco </li>
                             </ul>
-                            <ul>10 horas - Fundação Bradesco </ul>
                         </div>
                     </div>
                 </div>
