--- a/receita_html/receita.html
+++ b/receita_html/receita.html
@@ -24,11 +24,11 @@
                     Um clássico nas festas de fim de ano e nas confraternizações em família, uma sobremesa que conquista
                     paladares com sua combinação perfeita de cremosidade e sabor intenso de chocolate.</h4>
                 <div class="intern" >
-                    <h3 style="color: rgb(129, 46, 107);">Tempo de preparo</h3>
+                    <h3 style="color: rgb(129, 46, 107); font-size: 20px; line-height: 0.4;">Tempo de preparo</h3>
                     <ul>
-                        <li>Preparo 5 minutos</li>
-                        <li>Cozimento 10 minutos</li>   
-                        <li>Espera 40 minutos</li>
+                        <li>Preparo: <span> 5 minutos</span></li>
+                        <li>Cozimento: <span> 10 minutos</span></li>   
+                        <li>Espera: <span> 40 minutos</span></li>
                     </ul>
                 </div>
             </div>
