--- a/receita_html/receita.html
+++ b/receita_html/receita.html
@@ -24,13 +24,23 @@
                     Um clássico nas festas de fim de ano e nas confraternizações em família, uma sobremesa que conquista
                     paladares com sua combinação perfeita de cremosidade e sabor intenso de chocolate.</h4>
                 <div class="intern" >
-                    <h3 style="color: rgb(129, 46, 107); font-size: 20px; line-height: 0.4;">Tempo de preparo</h3>
+                    <h3 style="color: rgb(143, 52, 75); font-size: 21px; line-height: 0.4;">Tempo de preparo</h3>
+                    <div class="pr">
                     <ul>
-                        <li>Preparo: <span> 5 minutos</span></li>
-                        <li>Cozimento: <span> 10 minutos</span></li>   
-                        <li>Espera: <span> 40 minutos</span></li>
+                        <li><ul>Preparo: <span> 5 minutos</span></ul></li>
+                        <li><ul>Cozimento: <span> 10 minutos</span></ul></li>   
+                        <li><ul>Espera: <span> 40 minutos</span></ul></li>
                     </ul>
+                    </div>
                 </div>
+                <h2>Ingredientes</h2>
+                <ul>
+                    <li><ul></ul></li>
+                    <li><ul></ul></li>
+                    <li><ul></ul></li>
+                    <li><ul></ul></li>
+                    <li><ul></ul></li>
+                </ul>
             </div>
         </div>
     </div>
