--- a/receita_html/receita.html
+++ b/receita_html/receita.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    
     <div class="back">
         <div class="margem">
             <div class="img" style="padding-top: 48px;">
@@ -19,28 +20,79 @@
                     src="https://static.itdg.com.br/images/640-440/543ffeb02eaaa8dfe47ab5042b65a908/253792-354452-original-1-.jpeg">
             </div>
             <div class="marg">
-                <h1>Receita Pavê de Chocolate</h1>
+                <h1>Pavê Simples de Chocolate</h1>
                 <h4>É pavê ou pacumê! Essa receita de pavê de chocolate simples é um absurdo de gostosa!
                     Um clássico nas festas de fim de ano e nas confraternizações em família, uma sobremesa que conquista
                     paladares com sua combinação perfeita de cremosidade e sabor intenso de chocolate.</h4>
                 <div class="intern" >
-                    <h3 style="color: rgb(143, 52, 75); font-size: 21px; line-height: 0.4;">Tempo de preparo</h3>
-                    <div class="pr">
-                    <ul>
-                        <li><ul>Preparo: <span> 5 minutos</span></ul></li>
-                        <li><ul>Cozimento: <span> 10 minutos</span></ul></li>   
-                        <li><ul>Espera: <span> 40 minutos</span></ul></li>
-                    </ul>
-                    </div>
+                    <div class="p1">
+                    <h3>Tempo de preparo</h3>
                 </div>
-                <h2>Ingredientes</h2>
-                <ul>
-                    <li><ul></ul></li>
-                    <li><ul></ul></li>
-                    <li><ul></ul></li>
-                    <li><ul></ul></li>
-                    <li><ul></ul></li>
+                    <ul style="color: rgb(143, 52, 75);">
+                        <div class="p4">
+                        <li><ul style="font-weight: bold;">Total: <span> Aproximadamente 2h30min</span></ul></li>
+                        <li><ul style="font-weight: bold;">Cozimento: <span> 30 minutos</span></ul></li>   
+                        <li><ul style="font-weight: bold;">Resfriar: <span> 2 horas</span></ul></li>
+                    </div>
+                    </ul>
+                </div>
+                    <div class="p2">
+                        <h2>Ingredientes</h2>
+                    </div>
+                <ul style="color: rgb(129, 77, 28);">
+                    <div class="p4">
+                    <li><ul>1 Lata de creme de leite</ul></li>
+                    <li><ul>2 latas de leite condensado</ul></li>
+                    <li><ul>2 colheres de maisena</ul></li>
+                    <li><ul>manteiga sem sal ou margarina, só para dar o ponto</ul></li>
+                    <li><ul>3 colheres de chocolate em pó ou achocolatado</ul></li>
+                    <li><ul>1 lata de leite (a mesma medida da lata de creme de leite)</ul></li>
+                    <li><ul>biscoito maisena</ul></li>
+                    <li><ul>2 gemas</ul></li>
+                    <li><ul>leite para molhar os biscoitos</ul></li>
+                    <li><ul>raspas de chocolate (opcional)</ul></li>
+                    </div>
                 </ul>
+                <hr class="quebra">
+                <div class="p2">
+                    <h2>Preparo</h2>
+                </div>
+                <ol style="color: rgb(129, 77, 28); font-weight: bold;">
+                    <li><ul style="font-weight: lighter;">Primeiro, pegue a lata de leite condensado, as gemas, a maisena e o leite.</ul></li>
+                    <li><ul style="font-weight: lighter;">Coloque no fogo e deixe até que fique um creme, reserve.</ul></li>
+                    <li><ul style="font-weight: lighter;">Coloque a segunda lata de leite condensado com um pouco de margarina e o chocolate</ul></li>
+                    <li><ul style="font-weight: lighter;">Deixe no fogo até ficar um creme tipo brigadeiro.</ul></li>
+                    <li><ul style="font-weight: lighter;">Desligue o fogo e junte com o creme de leite.</ul></li>
+                    <li><ul>Montagem</ul><ul style="font-weight: lighter;">Coloque primeiro o creme branco.</ul></li>
+                    <li><ul style="font-weight: lighter;">Em seguida, mergulhe os biscoitos no leite e coloque sobre o creme branco.</ul></li>
+                    <li><ul style="font-weight: lighter;">Depois, coloque o creme preto e acrescente as raspas de chocolate sobre ele.</ul></li>
+                    <li><ul style="font-weight: lighter;">Deixe no congelador durante 2 horas, depois é só servir.</ul></li>
+                </ol>
+                <hr class="quebra">
+                <div class="p2">
+                    <h2>Valores Nutricionais</h2>
+                </div>
+                <span style="font-size: 20px;">A tabela a baixo mostra os valores nutricionais referidos a uma porçao.</span>
+                <div class="p6">
+                <ul style="font-size: 20px; margin-bottom: 15px;">Calorias <span class="p7", style="padding-left: 250px;">845kcal</span></ul>
+                </div>
+                <hr class="quebra">
+                <div class="p6">
+                    <ul style="font-size: 20px; margin-bottom: 15px;">Proteínas <span class="p7", style="padding-left: 255px;">11,5g</span></ul>
+                    </div>
+                    <hr class="quebra">
+                    <div class="p6">
+                        <ul style="font-size: 20px; margin-bottom: 15px;">Gorduras <span class="p7", style="padding-left: 255px;">42,5g</span></ul>
+                        </div>
+                        <hr class="quebra">
+                        <div class="p6">
+                            <ul style="font-size: 20px; margin-bottom: 15px;">Carboidratos <span class="p7", style="padding-left: 213px;">102,5g</span></ul>
+                            </div>
+                            <hr class="quebra">
+                            <div class="p6">
+                                <ul style="font-size: 20px; margin-bottom: 15px;">Fibras <span class="p7", style="padding-left: 305px;">1g</span></ul>
+                                </div>
+                                <hr class="quebra">
             </div>
         </div>
     </div>
