--- a/receita_html/receita.html
+++ b/receita_html/receita.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    
+    <div class="container">
     <div class="back">
         <div class="margem">
             <div class="img" style="padding-top: 48px;">
@@ -96,6 +96,7 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 
 </html>
