--- a/perfil_html/perfil.html
+++ b/perfil_html/perfil.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project_perfil</title>
     <link href="style.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
     <div class="back">
-    <img style="border-radius: 300px; width: 30%;", src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZdlHVwqECdSnpSNQhoMEZ2njjK7qce9CI5w&s">
+        <img style="border-radius: 300px; width: 27%;" ,
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZdlHVwqECdSnpSNQhoMEZ2njjK7qce9CI5w&s">
+        <div class="p1">
+            <h1 style="margin-bottom: 2px;">Nickolas Machado</h1>
+        </div>
+        <div class="p2">
+            <h3 style="margin-top: 4px;">Votorantim, São Paulo</h3>
+        </div>
+        <div class="p3">
+            <p>"Analyst and Systems Development Student"</p>
+        </div>
+        <div class="b1">
+            <h3 style="padding-top: 15px; padding-bottom: 15px;">GitHub</h3>
+        </div>
+        <div class="b1">
+            <h3 style="padding-top: 15px; padding-bottom: 15px;">Frontend Mentor</h3>
+        </div>
+        <div class="b1">
+            <h3 style="padding-top: 15px; padding-bottom: 15px;">LinkedIn</h3>
+        </div>
+        <div class="b1">
+            <h3 style="padding-top: 15px; padding-bottom: 15px;">Twitter</h3>
+        </div>
+        <div class="b1">
+            <h3 style="padding-top: 15px; padding-bottom: 15px;">Instagram</h3>
+        </div>
     </div>
 </body>
+
 </html>
