--- a/perfil_html/perfil.html
+++ b/perfil_html/perfil.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="back">
-        <img style="border-radius: 300px; width: 27%;" ,
+        <img style="border-radius: 300px; width: 25%;" ,
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZdlHVwqECdSnpSNQhoMEZ2njjK7qce9CI5w&s">
         <div class="p1">
-            <h1 style="margin-bottom: 2px;">Nickolas Machado</h1>
+            <h1 style="margin-bottom: 2px; font-weight: 500;">Nickolas Machado</h1>
         </div>
         <div class="p2">
             <h3 style="margin-top: 4px;">Votorantim, São Paulo</h3>
@@ -22,19 +22,19 @@
             <p>"Analyst and Systems Development Student"</p>
         </div>
         <div class="b1">
-            <h3 style="padding-top: 15px; padding-bottom: 15px;">GitHub</h3>
+            <h3 style="padding: 16px;">GitHub</h3>
         </div>
         <div class="b1">
-            <h3 style="padding-top: 15px; padding-bottom: 15px;">Frontend Mentor</h3>
+            <h3 style="padding: 16px;">Frontend Mentor</h3>
         </div>
         <div class="b1">
-            <h3 style="padding-top: 15px; padding-bottom: 15px;">LinkedIn</h3>
+            <h3 style="padding: 16px;">LinkedIn</h3>
         </div>
         <div class="b1">
-            <h3 style="padding-top: 15px; padding-bottom: 15px;">Twitter</h3>
+            <h3 style="padding: 16px;">Twitter</h3>
         </div>
         <div class="b1">
-            <h3 style="padding-top: 15px; padding-bottom: 15px;">Instagram</h3>
+            <h3 style="padding: 16px;">Instagram</h3>
         </div>
     </div>
 </body>
