--- a/perfil_html/perfil.html
+++ b/perfil_html/perfil.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="back">
-        <img style="border-radius: 300px; width: 25%;" ,
+        <img style="border-radius: 300px; width: 25%; margin-bottom: 10px;" ,
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQZdlHVwqECdSnpSNQhoMEZ2njjK7qce9CI5w&s">
         <div class="p1">
             <h1 style="margin-bottom: 2px; font-weight: 500;">Nickolas Machado</h1>
