--- a/faq_html/faq.html
+++ b/faq_html/faq.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project_FAQ</title>
     <link href="style.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
-    <div class="p1">
-        <h1>hasbab</h1>
+    <div class="container">
+        <div class="p2">
+            <div class="p1">
+                <h1 class="p3">hasbab</h1>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
