--- a/faq_html/faq.html
+++ b/faq_html/faq.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="p2">
             <div class="p1">
-                <h1 class="p3">hasbab</h1>
+                <h1 class="p3">FAQs</h1>
             </div>
         </div>
     </div>
