--- a/faq_html/faq.html
+++ b/faq_html/faq.html
@@ -12,7 +12,8 @@
     <div class="container">
         <div class="p2">
             <div class="p1">
-                <h1 class="p3">FAQs</h1>
+                <img class="p4"; src="star.png"> <span class="p3">FAQs</span>
+                <h3 class="p5">What is Frontend Mentor, and how will it help me?</h3>
             </div>
         </div>
     </div>
