--- a/faq_html/faq.html
+++ b/faq_html/faq.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project_FAQ</title>
     <link href="style.css" type="text/css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -13,23 +16,23 @@
         <div class="fundo">
             <div class="caixa">
                 <img class="star" ; src="star.png"> <span class="p3">FAQs</span>
-                <h3 class="p5">What is Frontend Mentor, and how will it help me?</h3> <div class="icon1"><img src="remove-circle.svg"></div>
+                <h3 class="p5">What is Frontend Mentor, and how will it help me?</h3> <img class="iconMinus, Icons"
+                    src="remove-circle.svg">
                 <p class="p4"> Frontend Mentor offers realistic coding challenges to help developers improve their
                     frontend coding
                     skills with projects in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for
                     portfolio building
                 </p>
-                <h3 class="p5">Is Frontend Mentor Free?</h3> <div class="icon1"><img src="add-circle.svg"></div>
+                <h3 class="p5">Is Frontend Mentor Free?</h3> <img class="iconPlus, Icons" src="add-circle.svg">
                 <hr class="quebra">
-                <h3 class="p5">Can I use Frontend Mentor projects in my portfolio?</h3> <div class="icon1"><img src="add-circle.svg"></div>
+                <h3 class="p5">Can I use Frontend Mentor projects in my portfolio?</h3> <img class="iconPlus, Icons"
+                    src="add-circle.svg">
                 <hr class="quebra">
-                <h3 class="p5">How can I get help if I'm stuck on a challenge?</h3> <div class="icon1"><img src="add-circle.svg"></div>
+                <h3 class="p5">How can I get help if I'm stuck on a challenge?</h3> <img class="iconPlus, Icons"
+                    src="add-circle.svg">
             </div>
         </div>
     </div>
-
-<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
