--- a/faq_html/faq.html
+++ b/faq_html/faq.html
@@ -15,19 +15,19 @@
     <div class="container">
             <div class="caixa">
                 <img class="star" ; src="./imgs/star.png"> <span class="p3">FAQs</span>
-                <h3 class="p5">What is Frontend Mentor, and how will it help me?</h3> <img class="iconMinus, Icons"
+                <h3 class="p5">What is Frontend Mentor, and how will it help me?</h3> <img class="Icons"
                     src="./imgs/remove-circle.svg">
                 <p class="p4"> Frontend Mentor offers realistic coding challenges to help developers improve their
                     frontend coding
                     skills with projects in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for
                     portfolio building
                 </p>
-                <h3 class="p5">Is Frontend Mentor Free?</h3> <img class="iconPlus, Icons" src="./imgs/add-circle.svg">
+                <h3 class="p5">Is Frontend Mentor Free?</h3> <img class="Icons" src="./imgs/add-circle.svg">
                 <hr class="quebra">
-                <h3 class="p5">Can I use Frontend Mentor projects in my portfolio?</h3> <img class=".iconPlus, Icons"
+                <h3 class="p5">Can I use Frontend Mentor projects in my portfolio?</h3> <img class="Icons"
                     src="./imgs/add-circle.svg">
                 <hr class="quebra">
-                <h3 class="p5">How can I get help if I'm stuck on a challenge?</h3> <img class="iconPlus, Icons"
+                <h3 class="p5">How can I get help if I'm stuck on a challenge?</h3> <img class="Icons"
                     src="./imgs/add-circle.svg">
             </div>
     </div>
