--- a/faq_html/faq.html
+++ b/faq_html/faq.html
@@ -8,28 +8,31 @@
     <link href="style.css" type="text/css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="container">
-            <div class="caixa">
-                <img class="star" ; src="./imgs/star.png"> <span class="p3">FAQs</span>
-                <h3 class="p5">What is Frontend Mentor, and how will it help me?</h3> <img class="Icons"
-                    src="./imgs/remove-circle.svg">
-                <p class="p4"> Frontend Mentor offers realistic coding challenges to help developers improve their
-                    frontend coding
-                    skills with projects in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for
-                    portfolio building
-                </p>
-                <h3 class="p5">Is Frontend Mentor Free?</h3> <img class="Icons" src="./imgs/add-circle.svg">
+        <div class="caixa">
+            <img class="star" ; src="./imgs/star.png"> <span class="p3">FAQs</span>
+            <h3 class="p5" style="margin-top: 40px;"> is Frontend Mentor, and how will it help me? <img class="icons"
+                    src="./imgs/remove-circle.svg"></h3>
+            <p class="p4"> Frontend Mentor offers realistic coding challenges to help developers improve their
+                frontend coding
+                skills with projects in HTML, CSS, and JavaScript. It's suitable for all levels and ideal for
+                portfolio building
+            </p>
+            <div class="space">
+                <h3 class="p5">Is Frontend Mentor Free? <img class="icons" src="./imgs/add-circle.svg"></h3>
                 <hr class="quebra">
-                <h3 class="p5">Can I use Frontend Mentor projects in my portfolio?</h3> <img class="Icons"
-                    src="./imgs/add-circle.svg">
+                <h3 class="p5">Can I use Frontend Mentor projects in my portfolio? <img class="icons"
+                        src="./imgs/add-circle.svg"></h3>
                 <hr class="quebra">
-                <h3 class="p5">How can I get help if I'm stuck on a challenge?</h3> <img class="Icons"
-                    src="./imgs/add-circle.svg">
+                <h3 class="p5">How can I get help if I'm stuck on a challenge? <img class="icons"
+                        src="./imgs/add-circle.svg"></h3>
             </div>
+        </div>
     </div>
 </body>
 
