--- a/faq_html/faq.html
+++ b/faq_html/faq.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="caixa">
             <img class="star" ; src="./imgs/star.png"> <span class="p3">FAQs</span>
-            <h3 class="p5" style="margin-top: 40px;"> is Frontend Mentor, and how will it help me? <img class="icons"
+            <h3 class="p5" style="margin-top: 40px;"> What is Frontend Mentor, and how will it help me? <img class="icons"
                     src="./imgs/remove-circle.svg"></h3>
             <p class="p4"> Frontend Mentor offers realistic coding challenges to help developers improve their
                 frontend coding
