--- a/flex_e_media/index.html
+++ b/flex_e_media/index.html
@@ -11,14 +11,12 @@
 <body>
     <div class="container">
         <div class="header">Header</div>
-        <div class="box">
-            <div class="conteudo">conteudo</div>
-            <div class="sidebar">sidebar</div>
-        </div>
-        <div class="box1">
-            <div class="parte">parte1</div>
-            <div class="parte2">parte2</div>
-            <div class="parte">parte3</div>
+        <div class="conteudo">conteudo</div>
+        <div class="sidebar">sidebar</div>
+        <div class="container1">
+            <div class="partes">parte1</div>
+            <div class="partes">parte2</div>
+            <div class="partes">parte3</div>
         </div>
     </div>
 </body>
